# DiscordMC

./: README.md  main.py  pyproject.toml  server.py
Pinger/: __init__.py
